--- a/BasharsBookstore/BasharsBookstore.csproj
+++ b/BasharsBookstore/BasharsBookstore.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BasharBooks.DataAccess\BasharBooks.DataAccess.csproj" />
+    <ProjectReference Include="..\BasharBooks.Models\BasharBooks.Models.csproj" />
+  </ItemGroup>
+
 </Project>
