--- a/BasharBooks.DataAccess/BasharBooks.DataAccess.csproj
+++ b/BasharBooks.DataAccess/BasharBooks.DataAccess.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BasharBooks.Models\BasharBooks.Models.csproj" />
+    <ProjectReference Include="..\BasharBooks.Utility\BasharBooks.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
