--- a/BasharsBookstore/BasharsBookstore.csproj
+++ b/BasharsBookstore/BasharsBookstore.csproj
@@ -14,11 +14,18 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BasharBooks.DataAccess\BasharBooks.DataAccess.csproj" />
     <ProjectReference Include="..\BasharBooks.Models\BasharBooks.Models.csproj" />
+    <ProjectReference Include="..\BasharBooks.Utility\BasharBooks.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Customer\Views\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
