--- a/BasharsBookstore/BasharsBookstore.csproj
+++ b/BasharsBookstore/BasharsBookstore.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -22,6 +22,10 @@
     <ProjectReference Include="..\BasharBooks.DataAccess\BasharBooks.DataAccess.csproj" />
     <ProjectReference Include="..\BasharBooks.Models\BasharBooks.Models.csproj" />
     <ProjectReference Include="..\BasharBooks.Utility\BasharBooks.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
   </ItemGroup>
 
 </Project>
